syntax = "proto3";

package todoPackage;

service Todo {
    rpc createTodo(TodoItem) returns (TodoItem);
    rpc updateTodo(TodoItem) returns (TodoItem);
    rpc deleteTodo(TodoItem) returns (TodoItem);
    rpc makeCompletedTodo(TodoItem) returns (TodoItem);
    rpc readTodos(voidNoParam) returns (TodoItems);
    rpc readTodosStream(voidNoParam) returns (stream TodoItem);

}

message voidNoParam {}

message TodoItem {
    int32 id = 1;
    string text = 2;
    bool iscompleted = 3;
}

message TodoItems {
    repeated TodoItem items = 1;
}